--- a/main.css
+++ b/main.css
@@ -11,5 +11,11 @@
     font-family: sans-serif;
     font-size: 100px;
     text-anchor: middle;	
-    fill: gray;
+    fill: black;
+    opacity: 0.1;
+  }
+
+  svg line {
+    stroke: black;
+    stroke-width: 10px;
   }
