--- a/main.css
+++ b/main.css
@@ -15,7 +15,8 @@
     opacity: 0.1;
   }
 
-  svg line {
-    stroke: black;
-    stroke-linecap:square;
+  .display {
+    stroke: steelblue;
+    stroke-linecap:round;
+    fill:none;
   }
