proper width tweening

--- a/main.css
+++ b/main.css
@@ -16,7 +16,8 @@
   }
 
   .display {
+    shape-rendering: crispEdges;
     stroke: steelblue;
-    stroke-linecap:round;
+    stroke-linecap:square;
     fill:none;
   }
