--- a/main.css
+++ b/main.css
@@ -1,14 +1,14 @@
 ﻿
   body {
-    margin: 35px 0 0 0 ;
-    background:steelblue;	
+    margin: 0 ;
+    background:magenta;	
     overflow:hidden;
   }
 
   #frame{
     margin: 0px auto; /*center*/
-    width: 98%;
-    height: 94%;
+    width: 100%;
+    height: 100%;
   }
 
   svg {
@@ -18,10 +18,14 @@
     height:100%;
   }
 
+  .border {
+    fill: steelblue;
+  }
+
   svg text { 
     font-weight: bolder;
-    font-family: sans-serif;
-    font-size: 100px;
+    font-family: monospace; 
+    font-size: 50px;
     text-anchor: middle;	
     fill: black;
     opacity: 0.1;
