seeing the magic at the end of the tunnel

--- a/main.css
+++ b/main.css
@@ -18,6 +18,12 @@
     height:100%;
   }
 
+  svg line {
+    shape-rendering: crispEdges;
+    stroke: steelblue;
+    stroke-linecap:round;
+    fill:none;
+  }
   .border {
     fill: steelblue;
   }
@@ -31,9 +37,3 @@
     opacity: 0.1;
   }
 
-  .display {
-    shape-rendering: crispEdges;
-    stroke: steelblue;
-    stroke-linecap:round;
-    fill:none;
-  }
