things fit now on any size screen

--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@
   line , ellipse {
     shape-rendering: crispEdges;
     stroke: steelblue;
-    stroke-linecap:square;
+    stroke-linecap:round;
     fill:none;
   }
 
